<resources>
    <string name="app_name">SAVI</string>
    <string name="app_title">Sistema de Asistencia \n Vecinal Integral</string>


    <string name="default_notification_channel_id">notificaciones</string>

    <!--botones-->
    <string name="btt_confirmar">Confirmar</string>
    <string name="btt_emitir">Emitir Alarma</string>
    <string name="btt_cancel">Cancelar</string>
    <string name="btt_aceptar">Aceptar</string>
    <string name="btt_agregar">Agregar</string>
    <string name="btt_save">Guardar</string>
    <string name="btt_ok">OK</string>
    <string name="btt_nook">No OK</string>
    <string name="btt_addFoto">Agregar foto</string>
    <string name="btt_back">Volver</string>
    <string name="btt_add_familia">Agregar Familia</string>
    <string name="btt_search_familia">Buscar Familia</string>
    <string name="btt_codigo_persona">Ver Codigo Personal</string>
    <string name="btt_salir_familia">Salir Grupo Familiar</string>

    <string name="btt_alerta_confirmar">Confirmar Alerta</string>
    <string name="btt_alerta_cancelar">Falsa Alerta</string>

    <string name="btt_alerta_confirmar_vacaciones">Confirmar vacaciones</string>
    <string name="btt_alerta_confirmar_ausencia">Confirmar ausencia</string>
    <string name="btt_alerta_confirmar_visitas">Confirmar visitas</string>
    <string name="btt_alerta_confirmar_noMolestar">Confirmar no molestar</string>
    <string name="btt_alerta_confirmar_ignorar">Confirmar Ignorar</string>


    <string name="btt_alerta_desactivar_vacaciones">Desactivar vacaciones</string>
    <string name="btt_alerta_desactivar_ausencia">Desactivar ausencia</string>
    <string name="btt_alerta_desactivar_visitas">Desactivar visitas</string>
    <string name="btt_alerta_desactivar_noMolestar">Desactivar no molestar</string>
    <string name="btt_alerta_desactivar_ignorar">Desactivar Ignorar</string>



    <!-- login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Clave</string>
    <string name="action_sign_in">Ingresar o Registrarse</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">El email ingresado es invalido</string>
    <string name="error_invalid_password">La contraseña es corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">"Son necesarios permisos para acceder a sus contactos"</string>
    <string name="title_activity_menu_principal">SAVI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Telefonos Utiles</string>
    <string name="action_exit_sistema">Salir</string>

    <!-- menu principal title -->
    <string name="menu_grupo_vecinal">Grupo Vecinal</string>
    <string name="menu_notificacion">Notificacion</string>
    <string name="menu_ajustes">Ajustes</string>
    <string name="menu_configuracion">Configuracion</string>
    <string name="menu_terminos">Sobre SAVI</string>

    <!-- menu principal items -->
    <string name="item_crear_grupo">Crear Grupo</string>
    <string name="item_unirse_grupo">Unirse a Grupo Vecinal</string>
    <string name="item_ver_grupo">Ver Grupo Vecinal</string>
    <string name="item_notificacion">Crear notificacion</string>
    <string name="item_perfil">Perfil</string>
    <string name="item_familiares">Familiares</string>
    <string name="item_domicilios">Domicilios</string>
    <string name="item_configuracion">Configuracion</string>
    <string name="item_compromiso">Compromiso</string>
    <string name="item_info">Informacion</string>
    <string name="item_enviar_invitacion">Enviar Invitacion</string>
    <string name="item_emitir_alerta">Emitir Alerta Vecinal</string>
    <string name="item_emitir_emergencia">Emitir Emergencia</string>
    <string name="item_grupos_ver">Ver Grupos</string>


    <!-- datos de usuario en registrarse -->

    <string name="agregar_domicilio">Agregar Domicilio</string>
    <string name="info_personal">Registro</string>
    <string name="info_nombre">Nombre</string>
    <string name="info_apellido">Apellido</string>
    <string name="info_nacimiento">Fecha de Nacimiento</string>
    <string name="info_ciudad">Ciudad</string>
    <string name="info_direccion">Dirección</string>
    <string name="info_numero">Numero</string>
    <string name="info_cuenta">Creacion de cuenta</string>
    <string name="info_email">Email</string>
    <string name="info_contrasena">Contraseña</string>
    <string name="info_confirme_contrasena">Confirme Contraseña</string>


    <!-- Perfil -->
    <string name="pefil_title">Perfil</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="documento">Nro. Documento</string>
    <string name="celular">Telefono Celular</string>
    <string name="fijo">Telefono Fijo</string>
    <string name="domicilio">Domicilio</string>
    <string name="trabajo">Trabajo</string>
    <string name="date_selected">Fecha</string>
    <string name="nacimiento">Fecha Nacimiento</string>


    <!-- informacion personal + datos domicilio -->

    <!-- menu principal -->

    <!-- descripcion de elementos-->
    <string name="main_imagen">imagen principal</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>

    <!-- AlertaActivity Vecinal -->
    <string name="alerta_titulo">SAVI - Creacion de Alarma</string>
    <string name="alerta_grupo">Grupo</string>
    <string name="alerta_tipo">Tipo de Alarma</string>
    <string name="alerta_contacto_p">Contacto principal</string>
    <string name="alerta_usuario">Contacto principal</string>
    <string name="alerta_disparada_titulo">SAVI - Alarma</string>
    <string name="alerta_todos">Todos</string>


    <!-- Alerta View PopUp -->
    <string name="alerta_view_tipo">Tipo</string>
    <string name="alerta_view_dirigida">Dirigida</string>
    <string name="alerta_view_creada">Creada</string>


    <!-- Alerta View PopUp Detail -->
    <string name="alerta_view_id">ID</string>
    <string name="alerta_view_user_creador">Usuario Creador</string>
    <string name="alerta_view_fecha_creacion">Fecha Creacion</string>
    <string name="alerta_view_dirigida_to">Dirigida</string>
    <string name="alerta_view_estado_dirigido">Estado</string>
    <string name="alerta_view_estado_alerta">Nivel de Alerta</string>
    <string name="alerta_view_fecha_respuesta">Fecha Respuesta</string>
    <string name="alerta_view_for">Visto por</string>
    <string name="alerta_view_for_respuesta">Confirma</string>

    <string name="alerta_view_respuestas">Usuarios Grupo</string>


    <!-- buscar grupo vecinal -->
    <string name="nombre_grupo">Nombre del Grupo</string>
    <string name="codigo_grupo">Codigo del Grupo</string>

    <!-- buscar Familiares -->
    <string name="codigo_familiar">Codigo Familiar</string>
    <string name="buscar_grupo">Buscar Grupo</string>

    <!-- Detalle Familiar -->
    <string name="familiar_nombre">Nombre</string>
    <string name="familiar_apellido">Apellido</string>
    <string name="familiar_dni">Dni</string>
    <string name="familiar_fecha_nacimiento">Fecha Nacimiento</string>
    <string name="familiar_celular">Celular</string>
    <string name="familiar_fijo">Fijo</string>
    <string name="familiar_domicilio">Domicilio</string>



    <!-- Detalle Familiar -->
    <string name="respuesta_alerta_title">Respuesta Alerta</string>
    <string name="respuesta_alerta_detalle">Detalle Alerta</string>
    <string name="respuesta_alerta_ubicacion">Ubicacion Central de Alerta</string>


    <!-- Configuracion -->
    <string name="configuracion_vacaciones">Vacaciones</string>
    <string name="configuracion_casaSola">Ausente</string>
    <string name="configuracion_visitas">Visitas en Casa</string>
    <string name="configuracion_noMolestar">No Molestar</string>
    <string name="configuracion_ignorarTodo">Ignorar Todo</string>


    <string name="configuracion_vacaciones_title_fechas">Elija fechas de vacaciones</string>
    <string name="configuracion_casaSola_selecc">Elija fecha cuando estara ausente</string>
    <string name="configuracion_noMolestar_selecc">Elija para activar alertas</string>


    <!-- Informacion -->
    <string name="informacion_title">Informacion</string>

    <string name="informacion_tesis">Tesis de Grado - Ingeniería de Sistemas</string>


    <string name="informacion_origen_1">El objetivo de SAVI es la protección de familias y hogares de los usuarios en base a la comunicación e interacción entre vecinos.</string>
    <string name="informacion_origen_2">No busca crear brechas entre la sociedad, sino que alienta la comunicación en una red privada y de confianza.</string>
    <string name="informacion_origen_3">Una herramientas de libre acceso para responder antes eventos cotidianos utilizando canales seguros.</string>

    <string name="informacion_autor">Autor: Jesús Matías Ezequiel Tangorra</string>

    <string name="informacion_directores">Directores: Dr. Luis Berdun, Dr. Alvaro Soria</string>

    <string name="informacion_fecha">Mayo, 2019</string>

</resources>
