<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:title="@string/menu_grupo_vecinal">
            <menu>
                <item
                    android:id="@+id/crear_grupo"
                    android:icon="@drawable/ic_add"
                    android:title="@string/item_crear_grupo" />
                <item
                    android:id="@+id/unirseGrupo"
                    android:icon="@drawable/ic_qr_code_scanner"
                    android:title="@string/item_unirse_grupo" />
                <item
                    android:id="@+id/mostarGrupo"
                    android:icon="@drawable/ic_groups"
                    android:title="@string/item_ver_grupo"
                    />



            </menu>
        </item>
    </group>

    <item android:title="@string/menu_notificacion">
        <menu>
            <item
                android:id="@+id/addNotificacion"
                android:icon="@drawable/ic_notifications"
                android:title="@string/item_notificacion" />
        </menu>
    </item>

    <item android:title="@string/menu_ajustes">
        <menu>
            <item
                android:id="@+id/datosPersonales"
                android:icon="@drawable/ic_person"
                android:title="@string/item_perfil" />
            <item
                android:id="@+id/familiares"
                android:icon="@drawable/ic_family_restroom"
                android:title="@string/item_familiares" />
            <item
                android:id="@+id/agregarDomicilio"
                android:icon="@drawable/ic_location_on"
                android:title="@string/item_domicilios" />
        </menu>
    </item>

    <item android:title="@string/menu_configuracion">
        <menu>
            <item
                android:id="@+id/configurarCuenta"
                android:icon="@drawable/ic_settings"
                android:title="@string/item_configuracion" />
        </menu>
    </item>

    <item android:title="@string/menu_terminos">
        <menu>
        <item
            android:id="@+id/informacion"
            android:icon="@drawable/ic_info"
            android:title="@string/item_info" />
        </menu>
    </item>

</menu>
