<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/rectangulo"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_item_ext"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/alerta_view_id"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/text_margin_item"
                android:id="@+id/alertaIdDetailalertaIdDetail"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/alerta_view_user_creador"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/text_margin_item"
                android:id="@+id/alertaDetailUsuarioCreador"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/alerta_view_fecha_creacion"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/text_margin_item"
                android:id="@+id/alertaDetailFechaCreacion"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/alerta_view_dirigida_to"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/text_margin_item"
                android:id="@+id/alertaDetailFor"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/alerta_view_estado_dirigido"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/text_margin_item"
                android:id="@+id/alertaDetailRespuesta"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/imagenEstadoAlertaA"
                android:layout_margin="@dimen/margin_item"
                />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/imagenEstadoAlertaB"
                android:layout_margin="@dimen/margin_item"
                />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/imagenEstadoAlertaC"
                android:layout_margin="@dimen/margin_item"
                />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/imagenEstadoAlertaD"
                android:layout_margin="@dimen/margin_item"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_item_ext"
            >

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorNegro"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alerta_view_respuestas"
                android:gravity="center_horizontal"
                android:textColor="@color/colorNegro"
                android:textStyle="italic"
                />

        </LinearLayout>


        <com.tangorra.matias.savi.Utils.ListViewCustom
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listViewRespuestas">
        </com.tangorra.matias.savi.Utils.ListViewCustom>

    </LinearLayout>



</LinearLayout>
