<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_marginLeft="@dimen/activity_horizontal_margin_big"
    >

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/imagenAlarmaExp"
        android:layout_margin="@dimen/margin_item"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_item"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_item_alerta"
                android:text="@string/alerta_view_tipo"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_item_alerta"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/text_margin_item"
                android:id="@+id/viewTipoAlarmaExp"/>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorNegro"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_item_alerta"
                android:text="@string/alerta_view_dirigida"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_item_alerta"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/text_margin_item"
                android:id="@+id/viewUsuarioDirigidaExp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_item_alerta"
                android:text="@string/alerta_view_creada"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_item_alerta"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/text_margin_item"
                android:id="@+id/viewFechaAlarmaExp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
